--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 <div class="toast" role="status" aria-live="assertive"></div>
 <footer class="footer container">
   <small>© <span id="year"></span> Aeropónicos 3D — Ñuble, Chile.</small>
+  <div>📚<strong>Neotech EduLab — Educación Inmersiva & I+D SpA</strong></div>
+  <div>Todos los derechos reservados - Prohibida su copia y/o reproduccion</div>
+  <div>🛠️Creado por:</div>
+  <div>👩‍🏫Belén Acuña Pérez — 📧 belen.acpe@gmail.com · 📞 +56 9 6266 4960</div>
+  <div>👨‍💻Francisco Pinto — 📧 franciscoandresp@gmail.com · 📞 +56 9 2002 7992</div>
+  <div>Hecho con ❤️ para el Liceo Bicentenario de Excelencia Polivalente San Nicolás</div>
+ </footer>
 </footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear(); updateCalculator();</script>
 </body></html>
