--- a/pages/faq.html
+++ b/pages/faq.html
@@ -1,1 +1,14 @@
-<!doctype html><html><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><link rel='stylesheet' href='../css/styles.css'><title>FAQ</title></head><body><header><div class='container nav'><div class='brand'><div class='logo'></div> Aeropónicos 3D</div><nav class='flex'><a class='btn' href='../index.html'>🏠 Inicio</a></nav></div></header><main class='container section'><h1>FAQ</h1><div class='grid'><article class='card'><div class='p'><h3>¿Qué cultivo puedo hacer?</h3><p>Hojas, aromáticas y frutos pequeños.</p></div></article><article class='card'><div class='p'><h3>¿Necesito nutrientes especiales?</h3><p>Usa soluciones A/B y ajusta EC/pH.</p></div></article></div></main></body></html>
+<!doctype html><html lang="es"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>FAQ — Aeroponicos 3D</title><link rel="stylesheet" href="../css/styles.css"></head><body>
+<header><div class="container nav"><div class="brand"><div class="logo"></div> Aeroponicos 3D</div><nav class="flex">
+<a class="btn" href="../index.html">🏠 Inicio</a></nav></div></header>
+<main class="container section">
+  <h1>❓ Preguntas frecuentes</h1>
+  <div class="grid">
+    <article class="card"><div class="p"><h3>¿Que cultivo puedo hacer?</h3><p>Hojas (lechuga, albahaca), frutos pequenos (aji, tomate cherry), aromaticas y mas.</p></div></article>
+    <article class="card"><div class="p"><h3>¿Cuanta agua consume?</h3><p>El sistema recircula y atomiza, reduciendo consumo hasta un 95% vs. suelo.</p></div></article>
+    <article class="card"><div class="p"><h3>¿Necesito nutrientes especiales?</h3><p>Usa soluciones hidroponicas A/B. Ajusta EC y pH segun etapa del cultivo.</p></div></article>
+    <article class="card"><div class="p"><h3>¿Puedo agregar IoT?</h3><p>Si. Tenemos kits opcionales de monitoreo (T°, %HR, pH, EC) y app web.</p></div></article>
+  </div>
+</main></body></html>
