--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div>🛠️Creado por:</div>
   <div>👩‍🏫Belén Acuña Pérez — 📧 belen.acpe@gmail.com · 📞 +56 9 6266 4960</div>
   <div>👨‍💻Francisco Pinto — 📧 franciscoandresp@gmail.com · 📞 +56 9 2002 7992</div>
-  <div>Hecho con ❤️ para el Liceo Bicentenario de Excelencia Polivalente San Nicolás</div>
+  <div>Hecho con ❤️</div>
  </footer>
 </footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear(); updateCalculator();</script>
