--- a/index.html
+++ b/index.html
@@ -68,15 +68,17 @@
 </main>
 
 <div class="toast" role="status" aria-live="assertive"></div>
+  
 <footer class="footer container">
   <small>© <span id="year"></span> Aeropónicos 3D — Ñuble, Chile.</small>
   <div>📚<strong>Neotech EduLab — Educación Inmersiva & I+D SpA</strong></div>
   <div>Todos los derechos reservados - Prohibida su copia y/o reproduccion</div>
   <div>🛠️Creado por:</div>
-  <div>👩‍🏫Belén Acuña Pérez — 📧 belen.acpe@gmail.com · 📞 +56 9 6266 4960</div>
-  <div>👨‍💻Francisco Pinto — 📧 franciscoandresp@gmail.com · 📞 +56 9 2002 7992</div>
+  <div>👩‍🏫 Belén Acuña — 📧 <a href="mailto:belen.acpe@gmail.com">belen.acpe@gmail.com</a> · 📞 <a href="tel:+56962664960">+56 9 6266 4960</a></div>
+  <div>👨‍💻 Francisco Pinto — 📧 <a href="mailto:franciscoandresp@gmail.com">franciscoandresp@gmail.com</a> · 📞 <a href="tel:+56920027992">+56 9 2002 7992</a></div>
   <div>Hecho con ❤️</div>
  </footer>
 </footer>
+  
 <script>document.getElementById('year').textContent = new Date().getFullYear(); updateCalculator();</script>
 </body></html>
