--- a/pages/faq.html
+++ b/pages/faq.html
@@ -11,4 +11,16 @@
     <article class="card"><div class="p"><h3>¿Necesito nutrientes especiales?</h3><p>Usa soluciones hidroponicas A/B. Ajusta EC y pH segun etapa del cultivo.</p></div></article>
     <article class="card"><div class="p"><h3>¿Puedo agregar IoT?</h3><p>Si. Tenemos kits opcionales de monitoreo (T°, %HR, pH, EC) y app web.</p></div></article>
   </div>
-</main></body></html>
+</main>
+
+<footer class="footer container">
+  <small>© <span id="year"></span> Aeropónicos 3D — Ñuble, Chile.</small>
+  <div>📚<strong>Neotech EduLab — Educación Inmersiva & I+D SpA</strong></div>
+  <div>Todos los derechos reservados - Prohibida su copia y/o reproduccion</div>
+  <div>🛠️Creado por:</div>
+  <div>👩‍🏫 Belén Acuña — 📧 <a href="mailto:belen.acpe@gmail.com">belen.acpe@gmail.com</a> · 📞 <a href="tel:+56962664960">+56 9 6266 4960</a></div>
+  <div>👨‍💻 Francisco Pinto — 📧 <a href="mailto:franciscoandresp@gmail.com">franciscoandresp@gmail.com</a> · 📞 <a href="tel:+56920027992">+56 9 2002 7992</a></div>
+  <div>Hecho con ❤️</div>
+ </footer>
+
+</body></html>
