--- a/pages/casos.html
+++ b/pages/casos.html
@@ -17,8 +17,8 @@
   <div>📚<strong>Neotech EduLab — Educación Inmersiva & I+D SpA</strong></div>
   <div>Todos los derechos reservados - Prohibida su copia y/o reproduccion</div>
   <div>🛠️Creado por:</div>
-  <div>👩‍🏫 Belén Acuña — 📧 <a href="mailto:belen.acpe@gmail.com">belen.acpe@gmail.com</a> · 📞 <a href="tel:+56962664960">+56 9 6266 4960</a></div>
-  <div>👨‍💻 Francisco Pinto — 📧 <a href="mailto:franciscoandresp@gmail.com">franciscoandresp@gmail.com</a> · 📞 <a href="tel:+56920027992">+56 9 2002 7992</a></div>
+  <div>👩‍🏫 Belén Acuña 📧 <a href="mailto:belen.acpe@gmail.com">belen.acpe@gmail.com</a> · 📞 <a href="tel:+56962664960">+56 9 6266 4960</a></div>
+  <div>👨‍💻 Francisco Pinto 📧 <a href="mailto:franciscoandresp@gmail.com">franciscoandresp@gmail.com</a> · 📞 <a href="tel:+56920027992">+56 9 2002 7992</a></div>
   <div>Hecho con ❤️</div>
  </footer>
  
