--- a/pages/faq.html
+++ b/pages/faq.html
@@ -1,4 +1,6 @@
-<!doctype html><html lang="es"><head>
+<!doctype html><html lang="es">\1
+  <link rel="icon" type="image/svg+xml" href="favicons/favicon-combo.svg">
+  <link rel="alternate icon" type="image/svg+xml" href="favicons/favicon-combo-dark.svg">
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>FAQ — Aeroponicos 3D</title><link rel="stylesheet" href="../css/styles.css"></head><body>
 <header><div class="container nav"><div class="brand"><div class="logo"></div> Aeroponicos 3D</div><nav class="flex">
