--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang="es"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="manifest" href="manifest.webmanifest">
-<link rel="icon" href="assets/img/icon-192.png">
+<link rel="icon" type="image/svg+xml" href="favicons/favicon-combo.svg">
 <title>Aeropónicos 3D — Tienda</title>
 <link rel="stylesheet" href="css/styles.css">
 <script defer src="js/app.js"></script>
