--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="manifest" href="manifest.webmanifest">
 <link rel="icon" type="image/svg+xml" href="favicons/favicon-combo.svg">
-<title>Aeropónicos 3D — Tienda</title>
+<title>Tienda Aeropónicos🧊3D </title>
 <link rel="stylesheet" href="css/styles.css">
 <script defer src="js/app.js"></script>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "Product", "name": "Aeropónicos 3D – 60 L (Pro)", "image": ["assets/img/aero60.jpg"], "description": "Sistema aeropónico impreso en 3D con bomba 12V/3A y 8 boquillas.", "brand": {"@type": "Brand", "name": "Aeropónicos 3D"}, "offers": {"@type": "Offer", "priceCurrency": "CLP", "price": "249000", "availability": "https://schema.org/InStock"}}</script>
@@ -13,13 +13,13 @@
   <nav class="flex">
     <a class="btn" href="pages/faq.html">❓ FAQ</a>
     <a class="btn" href="pages/specs.html">📐 Especificaciones</a>
-    <a class="btn" href="viewer3d/index.html">👁️ 3D</a>
-    <a class="btn" href="viewerAR/index.html">📱 AR</a>
-    <a class="btn" href="viewerVR/index.html">🥽 VR</a>
-    <a class="btn" href="pages/configurador.html">🛠️ Configurador</a>
-    <a class="btn" href="pages/casos.html">🎬 Casos</a>
+    <a class="btn" href="viewer3d/index.html">🧊3D</a>
+    <a class="btn" href="viewerAR/index.html">📱AR</a>
+    <a class="btn" href="viewerVR/index.html">🥽VR</a>
+    <a class="btn" href="pages/configurador.html">🛠️Configurador</a>
+    <a class="btn" href="pages/casos.html">🎬Casos</a>
     <a class="btn" href="pages/financiamiento.html">💳 Financiamiento</a>
-    <a class="btn" href="app/index.html">🛰️ App IoT</a>
+    <a class="btn" href="app/index.html">🛰️App IoT</a>
   </nav>
 </div></header>
 
