--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "¿Qué cultivo puedo hacer?", "acceptedAnswer": {"@type": "Answer", "text": "Hojas, aromáticas y frutos pequeños."}}, {"@type": "Question", "name": "¿Necesito nutrientes especiales?", "acceptedAnswer": {"@type": "Answer", "text": "Usa soluciones A/B y ajusta EC/pH."}}]}</script>
 </head><body>
 <header><div class="container nav">
-  <div class="brand"><div class="logo"></div> Aeropónicos 3D — Tienda</div>
+  <div class="brand"><div class="logo"></div>Tienda Aeropónicos🧊3D</div>
   <nav class="flex">
     <a class="btn" href="pages/faq.html">❓ FAQ</a>
     <a class="btn" href="pages/specs.html">📐 Especificaciones</a>
